--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Assure Energy Services
+<!doctype html>
+
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:image" content="" />
+  <title>Assure Energy Services | Grande Prairie, AB</title>
+
+  <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
+
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <img src="img/Assure-Energy-Services.pdf" alt="Assure Energy Services">
+
+</body>
