--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <body>
 
-  <img src="img/Assure-Energy-Services.pdf" alt="Assure Energy Services">
+  <img src="img/logo_red_vector.pdf" alt="Assure Energy Services">
 
 </body>
