--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
 
-  <link href="css/main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <img src="img/logo_red_vector.pdf" alt="Assure Energy Services">
+  <img src="logo_red_vector.pdf" alt="Assure Energy Services">
 
 </body>
