--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <body>
 
-  <img src="logo_red_vector.pdf" alt="Assure Energy Services">
+  <img src="logo_red_vector-page-001.jpg" alt="Assure Energy Services">
 
 </body>
