--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <body>
 
-  <img src="Assure-Energy-Logo.svg" alt="Assure Energy Services">
+  <img src="Assure-Energy-Logo.png" alt="Assure Energy Services">
 
 </body>
