--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
   <link href="main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#961c1f">
+<meta name="msapplication-TileColor" content="#961c1f">
+<meta name="theme-color" content="#961c1f">
 
 </head>
 
