--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 <body>
 
   <img src="Assure-Energy-Logo.png" alt="Assure Energy Services">
-  <h1 style="margin-top:30px;text-align:center;">Under Construction</h1>
+  <h1 style="margin-top:30px;text-align:center;">Website Under Construction</h1>
 
 </body>
