Fixed directory structure

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
 
-  <link href="main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
   
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#961c1f">
+<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#961c1f">
 <meta name="msapplication-TileColor" content="#961c1f">
 <meta name="theme-color" content="#961c1f">
 
@@ -25,7 +25,7 @@
 
 <body>
 
-  <img src="Assure-Energy-Logo.png" alt="Assure Energy Services">
+  <img src="img/Assure-Energy-Logo.png" alt="Assure Energy Services">
   <h1 style="margin-top:30px;text-align:center;">Website Under Construction</h1>
 
 </body>
