Added emails and people

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
-  
+
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#961c1f">
-<meta name="msapplication-TileColor" content="#961c1f">
-<meta name="theme-color" content="#961c1f">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#961c1f">
+  <meta name="msapplication-TileColor" content="#961c1f">
+  <meta name="theme-color" content="#961c1f">
 
 </head>
 
@@ -27,5 +27,18 @@
 
   <img src="img/Assure-Energy-Logo.png" alt="Assure Energy Services">
   <h1 style="margin-top:30px;text-align:center;">Website Under Construction</h1>
+  <h2>Email <a href="mailto:info@assureenergy.ca">info@AssureEnergy.ca</a> for more info</h2>
+  <div class="staff">
+    <div class="staff__member">
+      <h3>Chris Rempel</h3>
+      <p><a href="mailto:chris@assureenergy.ca">Chris@AssureEnergy.ca</a></p>
+      <p>780-897-7889</p>
+    </div>
+    <div class="staff__member">
+      <h3>Sly Latreille</h3>
+      <p><a href="mailto:sly@assureenergy.ca">Sly@AssureEnergy.ca</a></p>
+      <p>780-978-8677</p>
+    </div>
+  </div>
 
 </body>
