--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
   <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#961c1f">
   <meta name="msapplication-TileColor" content="#961c1f">
   <meta name="theme-color" content="#961c1f">
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130417297-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-130417297-1');
+  </script>
 
 </head>
 
