--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
           <h2 class="title"><a class="ir" href="/">Assure Energy Services</a></h2>
         </div>
         <div class="col-lg-9">
+          <div class="menu-btn">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-times"></i>
+          </div>
           <ul class="menu">
             <li class="current_page_item"><a href="/">Home</a></li>
             <li class=""><a href="/">About</a></li>
