--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section class="feature__photo" style="background-image:url(img/stock/alone-clouds-golden-hour-670720.jpg)">
       <div class="container">
-        <h1 class="feature__title">Assure Energy Services</h1>
+        <h1 class="feature__title larger">Assure Energy Services</h1>
         <a href="services" class="btn btn-primary">See what we can do for you</a>
       </div>
     </section>
