--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="cg__card">
               <img src="https://via.placeholder.com/400x250.png?text=Replace%20This%20Photo" alt="Water Technicians" />
               <p class="h4"><strong>Water Technicians</strong></p>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.</p>
               <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
           </div>
@@ -83,8 +83,9 @@
               <img src="https://via.placeholder.com/400x250.png?text=Replace%20This%20Photo" alt="" />
               <p class="h4"><strong>Load / Unload Stations</strong></p>
               <p>
-                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
               </p>
+              <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="150">
@@ -92,8 +93,9 @@
               <img src="https://via.placeholder.com/400x250.png?text=Replace%20This%20Photo" alt="" />
               <p class="h4"><strong>C Ring Setups/Takedowns</strong></p>
               <p>
-                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
               </p>
+              <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="200">
@@ -101,8 +103,9 @@
               <img src="https://via.placeholder.com/400x250.png?text=Replace%20This%20Photo" alt="" />
               <p class="h4"><strong>Tank Farm Rig In/Outs</strong></p>
               <p>
-                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
               </p>
+              <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
           </div>
         </div>
@@ -177,7 +180,7 @@
           <img src="https://via.placeholder.com/1200x500.png?text=Replace%20This%20Photo" alt="" />
         </div>
         <div class="col-md-6 col-lg-6">
-          <h3 class="feature__title">Contact Assure Energy Services.</h3>
+          <h3 class="feature__title">Contact Assure Energy.</h3>
           <div class="row">
             <div class="col-md-6">
               <h4>Chris Rempel</h4>
