Updated job titles

--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
           <div class="row">
             <div class="col-md-6">
               <h4>Chris Rempel</h4>
-              <p>General Manager</p>
+              <p>President &amp; CEO</p>
               <p>780-897-7889 / <a href="mailto:chris@assureenergy.ca"><strong class="primary-color">Chris@AssureEnergy.ca</strong></a></p>
             </div>
             <div class="col-md-6">
               <h4>Sly Latreille</h4>
-              <p>Operations / Business Development</p>
+              <p>Vice President Operations / Business</p>
               <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
             </div>
           </div>
