--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <i class="fas fa-times"></i>
           </div>
           <ul class="menu">
-            <li class="current_page_item"><a href="/">Home</a></li>
-            <li class=""><a href="/">About</a></li>
-            <li class=""><a href="/">Services</a></li>
-            <li class=""><a href="/">Contact Us</a></li>
+            <li class="current_page_item"><a href="index">Home</a></li>
+            <li class=""><a href="about">About</a></li>
+            <li class=""><a href="services">Services</a></li>
+            <li class=""><a href="contact">Contact Us</a></li>
           </ul>
         </div>
       </div>
