Added about, contact and services

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="" />
-  <title>About Assure Energy Services | Grande Prairie, AB</title>
+  <title>Contact Assure Energy Services | Grande Prairie, AB</title>
 
   <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
 
@@ -48,9 +48,9 @@
           </div>
           <ul class="menu">
             <li><a href="index">Home</a></li>
-            <li class="current_page_item"><a href="about">About</a></li>
+            <li class=""><a href="about">About</a></li>
             <li class=""><a href="services">Services</a></li>
-            <li class=""><a href="contact">Contact Us</a></li>
+            <li class="current_page_item"><a href="contact">Contact Us</a></li>
             <li><a href="https://www.linkedin.com/company/assure-energy-services/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
           </ul>
         </div>
@@ -60,43 +60,79 @@
 
   <main>
 
-    <section class="feature__photo small" style="background-image:url(img/2.jpg)">
+    <section class="feature__photo small" style="background-image:url(img/4.jpg)">
       <div class="container">
-        <h1 class="feature__title larger">About Assure Energy</h1>
+        <h1 class="feature__title larger">Contact Assure Energy</h1>
       </div>
     </section>
 
-    <div class="content bg-grey">
+    <div class="content bg-dark-grey">
       <div class="container">
-        <section class="photo-columns">
-          <div class="row">
-            <div class="col-lg-8">
-              <h5 class="muted-text aos-init" data-aos="fade-up">Quality Services</h5>
-              <h3 class="aos-init" data-aos="fade-up">Why Assure Energy?</h3>
-              <p class="aos-init" data-aos="fade-up">Our services will reduce the costs associated with your growing customer needs and help meet their demands without sacrificing quality and responsible growth.</p>
-              <p class="aos-init" data-aos="fade-up">By deploying experienced contract labour, we give you the advantage to react quickly to increased labour demands while avoiding the challenges associated with expedited screening, hiring, and training.</p>
-              <p class="aos-init" data-aos="fade-up">Assure employs highly motivated, professionally trained individuals who specialize in water management. Our team has the experience and ability to think critically and adapt to changing environments while carrying out tasks in a safe and efficient manner.</p>
-            </div>
-            <div class="col-lg-4 aos-init" data-aos="fade-up">
-              <img src="img/7.jpg" alt="" />
-            </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <i class="fas fa-phone fa-large m-40 aos-init" data-aos="fade-up"></i>
+            <h3 class="m-40 aos-init" data-aos="fade-up">Phone</h3>
+            <p class="aos-init" data-aos="fade-up">
+              Call Chris at 780-897-7889<br />Call Sly at 780-978-8677
+            </p>
           </div>
-          <div class="row">
-            <div class="col-lg-4 aos-init" data-aos="fade-up">
-              <img src="img/5.jpg" alt="" />
-            </div>
-            <div class="col-lg-8">
-              <h5 class="muted-text aos-init" data-aos="fade-up">Quality Values</h5>
-              <h3 class="aos-init" data-aos="fade-up">Our Core Values</h3>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Customer Service.</strong> You are our first priority. Uncompromising service and support backed by devoted professionals motivated to bring you the highest quality product.</p>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Safety.</strong> We are committed to promoting a safe culture that fosters consistency by adhering to strict policies and procedures. Our team is focused on completing tasks in the safest and most efficient manner that meets and exceeds industry standards.</p>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Integrity.</strong> Our team understands the importance of honesty, transparency, and professional conduct.Reliability and performance are paramount in defining the reputations of our team and your business.</p>
-            </div>
+          <div class="col-lg-6">
+            <i class="fas fa-envelope fa-large m-40 aos-init" data-aos="fade-up"></i>
+            <h3 class="m-40 aos-init" data-aos="fade-up">Email</h3>
+            <p class="aos-init" data-aos="fade-up">
+              Email Chris at <a href="mailto:chris@assureenergy.ca">chris@assureenergy.ca</a><br />Email Sly at <a href="mailto:sly@assureenergy.ca">sly@assureenergy.ca</a>
+            </p>
           </div>
-        </section>
+        </div>
       </div>
     </div>
 
+    <div class="content bg-grey">
+      <div class="container center">
+        <h2>Leave us your info</h2>
+        <h4 class="muted-color m-40">and we will get back to you.</h4>
+        <div class="narrow-container">
+          <form netlify>
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Full Name*" name="Full_Name" required/>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Email Address*" name="Email" required/>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Subject*" name="Subject" required/>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="form-group">
+                  <textarea name="Message" class="form-control" required placeholder="Message*"></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="form-group">
+                  <input type="submit" class="form-control btn btn-primary" name="Submit" value="Submit" />
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+
+      </div>
+    </div>
 
     <div class="wide-container content">
       <section class="row">
