--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="" />
-  <title>About Assure Energy Services | Grande Prairie, AB</title>
+  <title>Services | Assure Energy Services | Grande Prairie, AB</title>
 
   <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
 
@@ -47,9 +47,9 @@
             <i class="fas fa-times"></i>
           </div>
           <ul class="menu">
-            <li><a href="index">Home</a></li>
-            <li class="current_page_item"><a href="about">About</a></li>
-            <li class=""><a href="services">Services</a></li>
+            <li class=""><a href="index">Home</a></li>
+            <li class=""><a href="about">About</a></li>
+            <li class="current_page_item"><a href="services">Services</a></li>
             <li class=""><a href="contact">Contact Us</a></li>
             <li><a href="https://www.linkedin.com/company/assure-energy-services/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
           </ul>
@@ -60,43 +60,64 @@
 
   <main>
 
-    <section class="feature__photo small" style="background-image:url(img/2.jpg)">
+    <section class="feature__photo small" style="background-image:url(img/9.jpg)">
       <div class="container">
-        <h1 class="feature__title larger">About Assure Energy</h1>
+        <h1 class="feature__title larger">View Our Services</h1>
       </div>
     </section>
 
-    <div class="content bg-grey">
-      <div class="container">
-        <section class="photo-columns">
-          <div class="row">
-            <div class="col-lg-8">
-              <h5 class="muted-text aos-init" data-aos="fade-up">Quality Services</h5>
-              <h3 class="aos-init" data-aos="fade-up">Why Assure Energy?</h3>
-              <p class="aos-init" data-aos="fade-up">Our services will reduce the costs associated with your growing customer needs and help meet their demands without sacrificing quality and responsible growth.</p>
-              <p class="aos-init" data-aos="fade-up">By deploying experienced contract labour, we give you the advantage to react quickly to increased labour demands while avoiding the challenges associated with expedited screening, hiring, and training.</p>
-              <p class="aos-init" data-aos="fade-up">Assure employs highly motivated, professionally trained individuals who specialize in water management. Our team has the experience and ability to think critically and adapt to changing environments while carrying out tasks in a safe and efficient manner.</p>
-            </div>
-            <div class="col-lg-4 aos-init" data-aos="fade-up">
-              <img src="img/7.jpg" alt="" />
+    <div class="wide-container content">
+      <section class="text-center">
+        <h3>Assure Energy Services</h3>
+        <div class="cg__cards row">
+          <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="50">
+            <div class="cg__card">
+              <img src="img/1.jpg" alt="Water Technicians" />
+              <p class="h4"><strong>Water Technicians</strong></p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.</p>
+              <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
           </div>
-          <div class="row">
-            <div class="col-lg-4 aos-init" data-aos="fade-up">
-              <img src="img/5.jpg" alt="" />
-            </div>
-            <div class="col-lg-8">
-              <h5 class="muted-text aos-init" data-aos="fade-up">Quality Values</h5>
-              <h3 class="aos-init" data-aos="fade-up">Our Core Values</h3>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Customer Service.</strong> You are our first priority. Uncompromising service and support backed by devoted professionals motivated to bring you the highest quality product.</p>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Safety.</strong> We are committed to promoting a safe culture that fosters consistency by adhering to strict policies and procedures. Our team is focused on completing tasks in the safest and most efficient manner that meets and exceeds industry standards.</p>
-              <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Integrity.</strong> Our team understands the importance of honesty, transparency, and professional conduct.Reliability and performance are paramount in defining the reputations of our team and your business.</p>
+          <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="100">
+            <div class="cg__card">
+              <img src="img/2.jpg" alt="" />
+              <p class="h4"><strong>Load / Unload Stations</strong></p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
+              </p>
+              <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
           </div>
-        </section>
-      </div>
+          <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="150">
+            <div class="cg__card">
+              <img src="img/3.jpg" alt="" />
+              <p class="h4"><strong>C Ring Setups/Takedowns</strong></p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
+              </p>
+              <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="200">
+            <div class="cg__card">
+              <img src="img/4.jpg" alt="" />
+              <p class="h4"><strong>Tank Farm Rig In/Outs</strong></p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
+              </p>
+              <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
+    <section class="feature__photo small" style="background-image:url(img/10.jpg)">
+      <div class="narrow-container">
+        <h2 class="feature__title aos-init" data-aos="fade-up">Integrity Driven <span class="primary-color">Service.</span></h2>
+        <h4 class="aos-init" data-aos="fade-up" data-aos-delay="150">Whatever the project, our goal is to assist you until completion with <strong>integrity-driven service;</strong> enhancing the reputation of your business.</h4>
+      </div>
+    </section>
 
     <div class="wide-container content">
       <section class="row">
