--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li class=""><a href="about">About</a></li>
             <li class=""><a href="services">Services</a></li>
             <li class=""><a href="contact">Contact Us</a></li>
+            <li><a href="https://www.linkedin.com/company/assure-energy-services/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
