--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="cg__card">
               <img src="img/1.jpg" alt="Water Technicians" />
               <p class="h4"><strong>Water Technicians</strong></p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.</p>
+              <p>Our crew of skilled professionals will help meet your manpower needs quickly and effectively to alleviate the pressures of growing client demands, while maintaining responsible company growth.</p>
               <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
           </div>
@@ -84,7 +84,7 @@
               <img src="img/11.jpg" alt="" />
               <p class="h4"><strong>Load / Unload Stations</strong></p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
+                Our experienced technicians will spot pumps, manifolds and install all necessary equipment ensuring your project is operational in a timely fashion.
               </p>
               <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
@@ -94,7 +94,7 @@
               <img src="img/3.jpg" alt="" />
               <p class="h4"><strong>C Ring Setups/Takedowns</strong></p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
+                Assure Energy provides experienced, skilled labourers for c-ring setups and teardowns. Our crew has all tickets and tools necessary to build any model of c-ring in a safe and efficient manner.
               </p>
               <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
@@ -104,7 +104,7 @@
               <img src="img/4.jpg" alt="" />
               <p class="h4"><strong>Tank Farm Rig In/Outs</strong></p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
+                Our team assists with spotting tanks, installing necessary flanges/valves/ manifolds and hoses to any configuration required.
               </p>
               <a href="services" class="learn-more primary-color">Learn More <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
