--- a/services.html
+++ b/services.html
@@ -66,46 +66,74 @@
       </div>
     </section>
 
-    <div class="wide-container content">
-      <section class="text-center">
-        <h3>Assure Energy Services</h3>
-        <div class="cg__cards row">
-          <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="50">
-            <div class="cg__card">
-              <img src="img/1.jpg" alt="Water Technicians" />
-              <p class="h4"><strong>Water Technicians</strong></p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.</p>
-            </div>
+    <div class="container content">
+      <div class="row">
+        <div class="col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+          <img src="img/1.jpg" alt="Water Technicians" />
+        </div>
+        <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
+          <p class="h4"><strong>Water Technicians</strong></p>
+          <p>Assure Energy supplies experienced Water Transfer Technicians for a wide range of applications including but not limited to:</p>
+          <ul>
+            <li>Rig-In/Rig-Out Operations</li>
+            <li>Fracking Operations</li>
+            <li>Long Line Transfers</li>
+            <li>Pipeline Transfers</li>
+            <li>Flowback Operations</li>
+            <li>Winter Operations</li>
+            <li>Speed Loading/Offloading Stations</li>
+          </ul>
+          <p>Our crew of skilled professionals will help meet your manpower needs quickly and effectively to alleviate the pressures of growing client demands, while maintaining responsible company growth.</p>
+          <p>Our team provides knowledge and experience to help amplify your product with a culture dedicated to safety.</p>
+          <p>Motivated, reliable professionals promote a positive work environment and ensure your project is carried out efficiently to meet your client needs.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="content bg-grey">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
+            <p class="h4"><strong>Load / Unload Stations</strong></p>
+            <p>Assure Energy provides labour to Truck Speed Loading and Speed Unloading Stations. Our <strong>all-in-one</strong> services have you covered from rig-in to rig-out.</p>
+            <p>Our experienced technicians will spot pumps, manifolds and install all necessary equipment ensuring your project is operational in a timely fashion.</p>
+            <p>Once complete, our trained professionals operate your equipment with care safely and efficiently while adhering to a "Zero Spill" policy. Our team understands the importance of treating the Public, Truck Drivers and Clients with the utmost respect and professionalism.</p>
+            <p>Assure Energy documents volumes loaded and unloaded to ensure accurate volume totals. When your project is complete, our team ensures all equipment is rigged out and ready for transport with an emphasis on good housekeeping.</p>
+            <p>Assure Energy ensures your project will "Keep on Trucking”.</p>
           </div>
-          <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="100">
-            <div class="cg__card">
-              <img src="img/11.jpg" alt="" />
-              <p class="h4"><strong>Load / Unload Stations</strong></p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="150">
-            <div class="cg__card">
-              <img src="img/3.jpg" alt="" />
-              <p class="h4"><strong>C Ring Setups/Takedowns</strong></p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 aos-init" data-aos="fade-up" data-aos-delay="200">
-            <div class="cg__card">
-              <img src="img/4.jpg" alt="" />
-              <p class="h4"><strong>Tank Farm Rig In/Outs</strong></p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis risus non velit mollis cursus eu in magna.
-              </p>
-            </div>
+          <div class="col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+            <img src="img/11.jpg" alt="Load / Unload Stations" />
           </div>
         </div>
-      </section>
+      </div>
+    </div>
+
+    <div class="content">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+            <img src="img/3.jpg" alt="" />
+          </div>
+          <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
+            <p class="h4"><strong>C Ring Setups/Takedowns</strong></p>
+            <p>Assure Energy provides experienced, skilled labourers for c-ring setups and teardowns. Our crew has all tickets and tools necessary to build any model of c-ring in a safe and efficient manner.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="content bg-grey">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
+            <p class="h4"><strong>Tank Farm Rig In/Outs</strong></p>
+            <p>Assure Energy provides experienced, skilled labourers to rig-in and rig-out all your tank farm needs. Our team assists with spotting tanks, installing necessary flanges/valves/ manifolds and hoses to any configuration required.</p>
+          </div>
+          <div class="col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+            <img src="img/4.jpg" alt="" />
+          </div>
+        </div>
+      </div>
     </div>
 
     <section class="feature__photo small" style="background-image:url(img/10.jpg)">
