--- a/contact.html
+++ b/contact.html
@@ -197,6 +197,13 @@
         </div>
       </div>
     </div>
+    <div class="copyright">
+      <div class="wide-container">
+        <p>
+          &copy;2019 Assure Energy Services. Website by <a href="https://colbygarland.ca" target="_blank">Colby Garland</a>
+        </p>
+      </div>
+    </div>
   </footer>
 
 
