--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
 
   </main>
 
-  <footer class="content">
-    <div class="wide-container">
+  <footer>
+    <div class="wide-container content">
       <div class="row">
         <div class="col-md-6 col-lg-3">
           <h2 class="title"><a href="/" class="ir">Assure Energy Services</a></h2>
@@ -236,6 +236,13 @@
             <div class="col-6 col-sm-4 m-20"><img src="img/8.jpg" alt="" /></div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <div class="wide-container">
+        <p>
+          &copy;2019 Assure Energy Services. Website by <a href="https://colbygarland.ca" target="_blank">Colby Garland</a>
+        </p>
       </div>
     </div>
   </footer>
