--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4 aos-init" data-aos="fade-up">
-              <img src="img/5.jpg" alt="" />
+              <img src="img/5.jpg" alt="" class="btm-m" />
             </div>
             <div class="col-lg-8">
               <h5 class="muted-text aos-init" data-aos="fade-up">Quality Values</h5>
