Added slogan to site

--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
       </div>
     </section>
 
+    <div class="content bg-grey">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 center">
+              <h2 class="aos-init" data-aos="fade-up"><span class="primary-color">Integrity Driven</span> Labour Solutions</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="wide-container content">
       <section class="text-center">
         <h3>Assure Energy Services</h3>
@@ -206,6 +216,7 @@
         <div class="col-md-6 col-lg-3">
           <h2 class="title"><a href="/" class="ir">Assure Energy Services</a></h2>
           <p>Providing relief from the pressures of responsible growth by maintaining the integrity and enhancing the reputations of our clients.</p>
+          <p>Integrity driven, labour solutions.</p>
         </div>
         <div class="col-md-6 col-lg-3">
           <h3>Services</h3>
