--- a/about.html
+++ b/about.html
@@ -129,6 +129,7 @@
         <div class="col-md-6 col-lg-3">
           <h2 class="title"><a href="/" class="ir">Assure Energy Services</a></h2>
           <p>Providing relief from the pressures of responsible growth by maintaining the integrity and enhancing the reputations of our clients.</p>
+          <p>Integrity driven, labour solutions.</p>
         </div>
         <div class="col-md-6 col-lg-3">
           <h3>Services</h3>
