--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
     </div>
 
-    <div class="wide-container content">
+    <div class="wide-container content mobile-no-margin">
       <section class="text-center">
         <h3>Assure Energy Services</h3>
         <div class="cg__cards row">
