No margins on services images

--- a/services.html
+++ b/services.html
@@ -78,8 +78,8 @@
 
     <div class="container content">
       <div class="row">
-        <div class="col-md-6 col-lg-4 aos-init" data-aos="fade-up">
-          <img src="img/4.jpg" alt="Water Technicians" />
+        <div class="col-md-6 col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
+          <img src="img/4.jpg" alt="Water Technicians" class="m-20" />
         </div>
         <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
           <p class="h4"><strong>Water Technicians</strong></p>
@@ -111,7 +111,7 @@
             <p>Assure Energy documents volumes loaded and unloaded to ensure accurate volume totals. When your project is complete, our team ensures all equipment is rigged out and ready for transport with an emphasis on good housekeeping.</p>
             <p>Assure Energy ensures your project will "Keep on Trucking”.</p>
           </div>
-          <div class="col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+          <div class="col-md-6 col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
             <img src="img/11.jpg" alt="Load / Unload Stations" />
           </div>
         </div>
@@ -121,8 +121,8 @@
     <div class="content">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4 aos-init" data-aos="fade-up">
-            <img src="img/1.jpg" alt="" />
+          <div class="col-md-6 col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
+            <img src="img/1.jpg" alt="" class="m-20" />
           </div>
           <div class="col-md-6 col-lg-8 aos-init" data-aos="fade-up">
             <p class="h4"><strong>C Ring Setups/Takedowns</strong></p>
@@ -139,7 +139,7 @@
             <p class="h4"><strong>Tank Farm Rig In/Outs</strong></p>
             <p>Assure Energy provides experienced, skilled labourers to rig-in and rig-out all your tank farm needs. Our team assists with spotting tanks, installing necessary flanges/valves/ manifolds and hoses to any configuration required.</p>
           </div>
-          <div class="col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+          <div class="col-md-6 col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
             <img src="img/8.jpg" alt="" />
           </div>
         </div>
