No margin on images

--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
             <p class="aos-init" data-aos="fade-up">By deploying experienced contract labour, we give you the advantage to react quickly to increased labour demands while avoiding the challenges associated with expedited screening, hiring, and training.</p>
             <p class="aos-init" data-aos="fade-up">Assure employs highly motivated, professionally trained individuals who specialize in water management. Our team has the experience and ability to think critically and adapt to changing environments while carrying out tasks in a safe and efficient manner.</p>
           </div>
-          <div class="col-lg-4 aos-init" data-aos="fade-up">
+          <div class="col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
             <img src="img/7.jpg" alt="" />
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 aos-init" data-aos="fade-up">
+          <div class="col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
             <img src="img/5.jpg" alt="" class="btm-m" />
           </div>
           <div class="col-lg-8">
