--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <section class="feature__photo" style="background-image:url(img/10.jpg)">
       <div class="container">
         <h1 class="feature__title larger">Assure Energy Services</h1>
-        <a href="services" class="btn btn-primary">See what we can do for you</a>
+        <p><span class="primary-color">Integrity Driven</span> Labour Solutions</p>
+
       </div>
     </section>
 
@@ -71,7 +72,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 center">
-              <h2 class="aos-init" data-aos="fade-up"><span class="primary-color">Integrity Driven</span> Labour Solutions</h2>
+              <h2 class="aos-init" data-aos="fade-up"><a href="services" class="btn btn-primary h2">See what we can do for you</a></h2>
           </div>
         </div>
       </div>
