--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="https://assureenergy.ca/img/social-share.jpg" />
   <title>Services | Assure Energy Services | Grande Prairie, AB</title>
 
   <meta name="Description" content="Assure Energy Services in Grande Prairie, Alberta.">
