--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 
     <section class="feature__photo small" style="background-image:url(img/2.jpg)">
       <div class="container">
-        <h1 class="feature__title larger">About Assure Energy</h1>
+        <h1 class="feature__title larger roadgeek">About Assure Energy</h1>
       </div>
     </section>
 
