Fixed sly's title

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
             <div class="col-md-6">
               <h4>Sly Latreille</h4>
-              <p>Vice President Operations / Business</p>
+              <p>Vice President / Operations</p>
               <p>780-978-8677 / <a href="mailto:slys@assureenergy.ca"><strong class="primary-color">Sly@AssureEnergy.ca</strong></a></p>
             </div>
           </div>
