Changed contact page

--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,11 @@
       </div>
     </div>
 
+    <div class="wide-container content center">
+      <h2 class="muted-color">Looking to work with Assure Energy?</h2>
+      <h4>Please send your resume to <a href="mailto:info@assureenergy.ca" class="primary-color">info@assureenergy.ca</a></h4>
+    </div>
+
     <div class="content bg-grey">
       <div class="container center">
         <h2>Leave us your info</h2>
@@ -133,7 +138,7 @@
 
       </div>
     </div>
-
+<!--
     <div class="wide-container content">
       <section class="row">
         <div class="col-md-6 col-lg-6">
@@ -156,6 +161,7 @@
         </div>
       </section>
     </div>
+-->
 
   </main>
 
