--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
 
     <div class="wide-container content">
       <section class="row">
-        <div class="col-md-6 col-lg-6">
-          <img src="img/2.jpg" alt="" />
+        <div class="col-xl-6">
+          <img src="img/2.jpg" alt="" class="m-20" />
         </div>
-        <div class="col-md-6 col-lg-6">
+        <div class="col-xl-6">
           <h3 class="feature__title">Contact Assure Energy.</h3>
           <div class="row">
             <div class="col-md-6">
