--- a/index.html
+++ b/index.html
@@ -152,23 +152,23 @@
 
     <div class="container content">
       <section class="photo-columns">
-        <div class="row">
-          <div class="col-lg-8">
+        <div class="row small-content">
+          <div class="col-lg-6">
             <h5 class="muted-text aos-init" data-aos="fade-up">Quality Services</h5>
             <h3 class="aos-init" data-aos="fade-up">Why Assure Energy?</h3>
             <p class="aos-init" data-aos="fade-up">Our services will reduce the costs associated with your growing customer needs and help meet their demands without sacrificing quality and responsible growth.</p>
             <p class="aos-init" data-aos="fade-up">By deploying experienced contract labour, we give you the advantage to react quickly to increased labour demands while avoiding the challenges associated with expedited screening, hiring, and training.</p>
             <p class="aos-init" data-aos="fade-up">Assure employs highly motivated, professionally trained individuals who specialize in water management. Our team has the experience and ability to think critically and adapt to changing environments while carrying out tasks in a safe and efficient manner.</p>
           </div>
-          <div class="col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
-            <img src="img/7.jpg" alt="" />
+          <div class="col-lg-6 aos-init mobile-no-padding" data-aos="fade-up">
+            <img src="img/6.jpg" alt="" />
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 aos-init mobile-no-padding" data-aos="fade-up">
-            <img src="img/5.jpg" alt="" class="btm-m" />
+          <div class="col-lg-6 aos-init mobile-no-padding" data-aos="fade-up">
+            <img src="img/4.jpg" alt="" class="btm-m" />
           </div>
-          <div class="col-lg-8">
+          <div class="col-lg-6">
             <h5 class="muted-text aos-init" data-aos="fade-up">Quality Values</h5>
             <h3 class="aos-init" data-aos="fade-up">Our Core Values</h3>
             <p class="aos-init" data-aos="fade-up"><strong class="primary-color">Customer Service.</strong> You are our first priority. Uncompromising service and support backed by devoted professionals motivated to bring you the highest quality product.</p>
